--- a/world-of-nabeeda-next/styles/index.scss
+++ b/world-of-nabeeda-next/styles/index.scss
@@ -1,1 +1,7 @@
-@import "./common.scss"
+@import "./common.scss";
+
+
+
+//Components
+@import "../components/styles/NavBar.scss";
+@import "../components/styles/TopNavBar.scss";
