--- a/world-of-nabeeda-next/styles/common.scss
+++ b/world-of-nabeeda-next/styles/common.scss
@@ -2,6 +2,24 @@ body {
     margin: unset;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
+
+
  * {
      box-sizing: border-box;
  }
+
+
+a {
+    color: inherit;
+    text-decoration: unset;
+
+    &:hover {
+        text-decoration: underline;
+    }
+}
+
+.container {
+    margin: 0 auto;
+    max-width: 800px;
+    padding: 0 1em;
+}
