--- a/worldofnabeeda-frontend/styles/index.scss
+++ b/worldofnabeeda-frontend/styles/index.scss
@@ -4,3 +4,4 @@
 //components 
 @import "../components/NavBar/NavBar.scss";
 @import "../components/PostPreview/PostPreview.scss";
+@import "../components/TopBar/TopBar.scss";
