--- a/worldofnabeeda-frontend/styles/index.scss
+++ b/worldofnabeeda-frontend/styles/index.scss
@@ -5,3 +5,4 @@
 @import "../components/NavBar/NavBar.scss";
 @import "../components/PostPreview/PostPreview.scss";
 @import "../components/TopBar/TopBar.scss";
+@import "../components/HomeLatestPosts/HomeLatestPosts.scss";
