--- a/components/PostPreview/PostPreview.scss
+++ b/components/PostPreview/PostPreview.scss
@@ -1,14 +1,26 @@
 .postPreview {
+    display: block;
     margin: 2em 0;
     padding: 1em;
     background: white;
-    border-radius: 8px;
-    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+    border-radius: 0px;
     transition: all 0.31 cubic-bezier(0.25, 0.8,0.25,1);
-    cursor: pointer;
+    
 
-    &:hover{
-        box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+    button{
+        border: none;
+        background: none;
+        cursor: pointer;
+        color: black;
+        margin: 0px;
+        padding: 0;
+        font-weight: bold;
+        border-color: pink;
+        opacity: 90%;
+        
+        &:hover{
+            opacity: 100%;
+        }
     }
 
     h3{
@@ -20,8 +32,7 @@
     }
 
     .previewImage{
-        height: 15%;
-        width: 15%;
+        padding: auto;
     }
     
 }
