Added hamburger menu

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -6,3 +6,4 @@
 @import "../components/PostPreview/PostPreview.scss";
 @import "../components/TopBar/TopBar.scss";
 @import "../components/HomeLatestPosts/HomeLatestPosts.scss";
+@import "../components/NavBar/Hamburger.scss";
