--- a/components/NavBar/Hamburger.scss
+++ b/components/NavBar/Hamburger.scss
@@ -3,7 +3,7 @@
 }
 
 
-@media (max-width: 767px){
+@media (max-width: 960px){
     .hamburger {
         width: 2rem;
         height: 2rem;
@@ -11,6 +11,7 @@
         justify-content: space-around;
         flex-flow: column nowrap;
         z-index: 10;
+        margin: 1px 1px;
     }
 }
 
