--- a/components/HomeLatestPosts/HomeLatestPosts.scss
+++ b/components/HomeLatestPosts/HomeLatestPosts.scss
@@ -1,12 +1,38 @@
 .categoryTitle{
-        color: black;
-        font-weight: bolder;
-        font-size: large;
+    color: black;
+    font-weight: bolder;
+    font-size: large;
 }
 
 .separator{
-    border-color:#FBD3E5;
-    height: 1px;
-    opacity: 25%;
+border-color:#FBD3E5;
+height: 1px;
+opacity: 25%;
 }
+
+.mobileContainer{
+    display: none;
+}
+
+@media  screen and (max-width: 960px) {
+    
+    .desktopContainer{
+        display: none;
+    }
+
+    .mobileContainer{
+        display: flex;
+    }
+
+    .categoryTitle{
+        font-size: x-large;
+    }
+    
+    .separator{
+        opacity: 70%;
+    }
+}
+
+
+
 
