--- a/components/NavBar/NavBar.scss
+++ b/components/NavBar/NavBar.scss
@@ -1,3 +1,5 @@
+
+
 .navBar {
 
     padding: 1em 0;
@@ -37,13 +39,13 @@
         overflow: hidden;
         cursor: pointer;
         transition: 2ms;  
-        width: 50%;
-        height: 50%;
+        width: 25%;
+        height: 25%;
     }
 
 }
 
-@media screen and (max-width: 960px) {
+@media screen and (max-width: 1024px) {
     .navContainer{
         display: none;
 
@@ -54,5 +56,17 @@
         img {
             display: none;
         }
+    }
+}
+
+
+@media screen and (max-width: 1024px) {
+
+    .navLogo{
+        overflow: hidden;
+        cursor: pointer;
+        transition: 2ms;  
+        width: 50%;
+        height: 50%;
     }
 }
