Added footer component to _app

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -7,3 +7,4 @@
 @import "../components/TopBar/TopBar.scss";
 @import "../components/HomeLatestPosts/HomeLatestPosts.scss";
 @import "../components/NavBar/Hamburger.scss";
+@import "../components/Footer/Footer.scss";
