--- a/components/Footer/Footer.scss
+++ b/components/Footer/Footer.scss
@@ -22,7 +22,13 @@
 
     .socialLinkContainer{
         padding-right: 1em;
+
+        &:hover{
+            color: white;
+        }
     }
+
+
 
 }
 
