Added category preview component and relevant scss

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -4,6 +4,7 @@
 //components 
 @import "../components/NavBar/NavBar.scss";
 @import "../components/PostPreview/PostPreview.scss";
+@import "../components/CategoryPreview/CategoryPreview.scss";
 @import "../components/TopBar/TopBar.scss";
 @import "../components/HomeLatestPosts/HomeLatestPosts.scss";
 @import "../components/NavBar/Hamburger.scss";
