--- a/components/CategoryPreview/CategoryPreview.scss
+++ b/components/CategoryPreview/CategoryPreview.scss
@@ -1,7 +1,6 @@
-.postPreview {
+.categoryPreview {
     margin: 2em 0;
     padding: 1em;
-    background: white;
     transition: all 0.31 cubic-bezier(0.25, 0.8,0.25,1);
 
     h3{
@@ -14,12 +13,12 @@
         font-size: large;
     }
 
-    .previewImage{
+    .categoryPreviewImage{
         width: 100%;
         height: 100%;
     }
     
-    .categoryBox{
+    .categoryPreviewBox{
         p{
             color: white;
             background-color: black;
