--- a/components/PostPreview/PostPreview.scss
+++ b/components/PostPreview/PostPreview.scss
@@ -1,7 +1,8 @@
 .postPreview {
     margin: 2em 0;
-    padding: 1em;
     transition: all 0.31 cubic-bezier(0.25, 0.8,0.25,1);
+    padding: 0 1em;
+
 
     h3{
         margin-top: unset;
@@ -15,28 +16,70 @@
 
     .previewImage{
         width: 100%;
-        height: 100%;
+        height: 23vw;
+        object-fit: cover;
+        box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+        border-radius: .5em;
+
+        &:hover{
+            box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+            transition: transform 250ms;
+        }
     }
     
     .categoryBox{
         button{
             color: white;
             background-color: black;
+            margin-top: 2em;
             padding: .5em 1em;
             text-transform:capitalize;
-            font-size: small;
+            font-size: medium;
             font-weight: bold;
+            border: none;
+            border-radius: .5em;
+
+            &:hover{
+                background-color: pink;
+            }
         }
     }
 
     .title {
         color: black;
         margin-top: 1em;
+        margin-bottom: .1em;
+        font-size: xx-large;
         
     }
     .author {
         color: rgb(199, 142, 151);
     }
+
+    .postPreviewContent{
+        padding-top: .5em;
+        padding-bottom: 1em;
+    }
+
+    .readMoreButton{
+        color: black;
+        background-color: #50D0E8;
+        border-color: none;
+        padding: .5em 1em;
+        border: none;
+        margin-top: 2em;
+        text-transform:capitalize;
+        font-size: medium;
+        font-weight: bold;
+      
+
+        &:hover{
+            color:#50D0E8;
+            background-color: grey;
+        }
+    }
+
+
 }
 
 
@@ -44,5 +87,11 @@
 
    .postPreview{
        padding: auto;
+   }
+
+    .previewImage{
+        width: 100%;
+        height: 100%;
+        object-fit: none;
    }
 }
