Added carousel to the homepage, awaiting content type from strapi

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -9,3 +9,4 @@
 @import "../components/HomeLatestPosts/HomeLatestPosts.scss";
 @import "../components/NavBar/Hamburger.scss";
 @import "../components/Footer/Footer.scss";
+@import "../components/HomeCarousel/HomeCarousel.scss";
