Added hamburger menu to _app

--- a/components/PostPreview/PostPreview.scss
+++ b/components/PostPreview/PostPreview.scss
@@ -53,7 +53,13 @@
         
     }
     .author {
-        color: rgb(199, 142, 151);
+        color: black;
+        font-weight: bold;
+    }
+
+    .authorName{
+        color: pink;
+        text-decoration: none;
     }
 
     .postPreviewContent{
