--- a/components/HomeCarousel/HomeCarousel.scss
+++ b/components/HomeCarousel/HomeCarousel.scss
@@ -3,3 +3,12 @@
     margin: 0;
     padding: 0;
 }
+
+
+@media screen and (max-width: 1024px) {
+    
+   .carousel{
+       display: none;
+   } 
+   
+}
