--- a/components/Navigation/Mobile/MobileNav.scss
+++ b/components/Navigation/Mobile/MobileNav.scss
@@ -1,55 +1,70 @@
-.mobileNav {
-    display: none
-}
-
-@media screen and (max-width: 960px){
-    .mobileNav{
-        display: flex;
-        align-items: center;
-
-        .hamburgerMenu{
-            display: flex;
-            position: absolute;
-            background: black;
-            top: 80px;
-            right: 0;
-            width: 50%;
-            font-size: x-large;
-
-            ul {
-                display: flex;
-                list-style: none;
-                flex-direction: column;
-            }
-        }
-
-        .mobileLink{
-            display: flex;
-            color: white;
-            padding-left: 15%;
-           
-            &:hover{
-                text-decoration: none;
-                color:#FBD3E5;
-            }   
-
-        }
-    }
-
-    .hamburgerIcon{
-        color: pink;
-        border-color: black;
-        position: absolute;
-        right:  5%;
-        cursor: pointer;
-    }
-
-    .closeIcon{
-        color: pink;
-        position: absolute;
-        right:  5%;
-        cursor: pointer;
-    }
+/* Position and sizing of burger button */
+.bm-burger-button {
+    position: absolute;
+    width: 36px;
+    height: 30px;
+    right: 0;
+    margin-right: 5%;
+    top: 36px;
+  }
+  
+  /* Color/shape of burger icon bars */
+  .bm-burger-bars {
+    background: black;
+  }
+  
+  /* Color/shape of burger icon bars on hover*/
+  .bm-burger-bars-hover {
+    background: pink;
+  }
+  
+  /* Position and sizing of clickable cross button */
+  .bm-cross-button {
+    height: 50px;
+    width: 50px;
+  }
+  
+  /* Color/shape of close button cross */
+  .bm-cross {
+    background: pink;
+  }
+  
+  /*
+  Sidebar wrapper styles
+  Note: Beware of modifying this element as it can break the animations - you should not need to touch it in most cases
+  */
+  .bm-menu-wrap {
+    position: fixed;
+    height: 100%;
+  }
+  
+  /* General sidebar styles */
+  .bm-menu {
+    background: black;
+    padding: 0 0.6em ;
+    font-size: x-large;
+  }
+  
+  /* Wrapper for item list */
+  .bm-item-list {
+    color: white;
+    padding: 0.8em;
+    list-style: none;
+  }
+  
+  /* Individual item */
+  .mobileLink {
+    display: inline-block;
+    font-size: xx-large;
     
-}
-
+    &:hover{
+        color: pink;
+        text-decoration: none;
+        cursor: pointer;
+    }
+  }
+  
+  /* Styling of overlay */
+  .bm-overlay {
+    background: pink;
+  }
