--- a/components/Footer/Footer.scss
+++ b/components/Footer/Footer.scss
@@ -33,8 +33,9 @@
 }
 
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1280px) {
     .footer{
+        display: none;
         
         ul {
             display: none;
