--- a/components/PostPreview/PostPreview.scss
+++ b/components/PostPreview/PostPreview.scss
@@ -1,7 +1,6 @@
 .postPreview {
-    margin: 2em 0;
     transition: all 0.31 cubic-bezier(0.25, 0.8,0.25,1);
-    padding: 0 1em;
+    padding:  .25em;
 
 
     h3{
@@ -32,7 +31,7 @@
             color: white;
             background-color: black;
             margin-top: 2em;
-            padding: .5em 1em;
+            padding: 0.1em 1em;
             text-transform:capitalize;
             font-size: medium;
             font-weight: bold;
@@ -47,19 +46,26 @@
 
     .title {
         color: black;
-        margin-top: 1em;
-        margin-bottom: .1em;
+        margin-top: .01em;
+        margin-bottom: 0;
         font-size: xx-large;
         
     }
+
     .author {
         color: black;
         font-weight: bold;
+
+        p{
+            margin-top: 0.1em;
+        }
+
     }
 
     .authorName{
         color: pink;
         text-decoration: none;
+        margin-top: 0.1em;
     }
 
     .postPreviewContent{
@@ -67,21 +73,26 @@
         padding-bottom: 1em;
     }
 
+    .postDescription{
+        
+    }
+
     .readMoreButton{
-        color: black;
-        background-color: #50D0E8;
+        color: white;
+        background-color: black;
         border-color: none;
         padding: .5em 1em;
         border: none;
-        margin-top: 2em;
+        margin-top: 1.5em;
         text-transform:capitalize;
         font-size: medium;
         font-weight: bold;
+        box-shadow: rgba(38, 38, 39, 0.2) 0px 7px 29px 0px;
       
 
         &:hover{
-            color:#50D0E8;
-            background-color: grey;
+            color: black;
+            background-color: #50D0E8;
         }
     }
 
@@ -89,15 +100,15 @@
 }
 
 
-@media  screen and (max-width: 960px) {
+@media  screen and (max-width: 1280px) {
 
    .postPreview{
-       padding: auto;
+       padding: none !important;
    }
 
     .previewImage{
         width: 100%;
-        height: 100%;
-        object-fit: none;
+        height: 50em;
+        object-fit: cover;
    }
 }
