--- a/components/CategoryPreview/CategoryPreview.scss
+++ b/components/CategoryPreview/CategoryPreview.scss
@@ -1,35 +1,99 @@
-.categoryPreview {
-    margin: 2em 0;
-    padding: 1em;
-    transition: all 0.31 cubic-bezier(0.25, 0.8,0.25,1);
 
-    h3{
-        margin-top: unset;
-        font-size: x-large;
-    }
+.previewImageSmall{
+    width: 100%;
+    height: 13vw;
+    object-fit: cover;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+        
 
-    p {
-        margin-bottom: unset;
-        font-size: large;
+    &:hover{
+        box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+        transition: transform 250ms;
     }
-
-    .categoryPreviewImage{
-        width: 100%;
-        height: 100%;
-    }
+}
     
-    .categoryPreviewBox{
-        p{
-            color: white;
-            background-color: black;
+.categoryBoxSmall{
+    button{
+        color: white;
+        background-color: black;
+        margin-top: .5em;
+        padding: 0.1em 1em;
+        text-transform:capitalize;
+        font-size: medium;
+        font-weight: bold;
+        border: none;
+            
+
+        &:hover{
+            background-color: pink;
         }
     }
 }
 
+.titleSmall {
+    color: black;
+    margin-top: .01em;
+    margin-bottom: 0;
+    font-size: xx-large;  
+}
 
-@media  screen and (max-width: 960px) {
+.authorSmall {
+    color: black;
+    font-weight: bold;
+
+    p{
+        margin-top: 0.1em;
+    }
+
+}
+
+.authorNameSmall{
+    color: pink;
+    text-decoration: none;
+    margin-top: 0.1em;
+}
+
+.postPreviewContentSmall{
+    padding-top: .5em;
+    padding-bottom: 1em;
+}
+
+.readMoreButtonSmall{
+    color: white;
+    background-color: black;
+    border-color: none;
+    padding: .5em 1em;
+    border: none;
+    margin-top: 1.5em;
+    text-transform:capitalize;
+    font-size: medium;
+    font-weight: bold;
+    box-shadow: rgba(38, 38, 39, 0.2) 0px 7px 29px 0px;
+      
+
+    &:hover{
+        color: black;
+        background-color: #50D0E8;
+        }
+}
+
+
+
+
+
+@media  screen and (max-width: 1280px) {
 
    .postPreview{
-       padding: auto;
+       padding: none !important;
    }
+
+    .previewImageSmall{
+        width: 100%;
+        height: 100%;
+   }
+
+   .titleSmall {
+        font-size: small;  
+    }
 }
+
