--- a/components/PostPreview/PostPreview.scss
+++ b/components/PostPreview/PostPreview.scss
@@ -18,7 +18,7 @@
         height: 23vw;
         object-fit: cover;
         box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-        border-radius: .5em;
+        
 
         &:hover{
             box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
@@ -30,13 +30,13 @@
         button{
             color: white;
             background-color: black;
-            margin-top: 2em;
+            margin-top: .5em;
             padding: 0.1em 1em;
             text-transform:capitalize;
             font-size: medium;
             font-weight: bold;
             border: none;
-            border-radius: .5em;
+            
 
             &:hover{
                 background-color: pink;
@@ -48,8 +48,7 @@
         color: black;
         margin-top: .01em;
         margin-bottom: 0;
-        font-size: xx-large;
-        
+        font-size: xx-large;  
     }
 
     .author {
@@ -108,7 +107,11 @@
 
     .previewImage{
         width: 100%;
-        height: 50em;
-        object-fit: cover;
+        height: 100vh;
+        
    }
+
+   .title {
+        font-size: small;  
+    }
 }
