--- a/styles/common.scss
+++ b/styles/common.scss
@@ -18,10 +18,16 @@ a {
     &:hover{
         text-decoration: underline;
     }
+
+    &:focus{
+        outline: 3px solid pink;
+    }
 }
 
+
+
 .container {
-    margin: 0 auto;
-    max-width: 80%;
-    padding: 0 1em;
+            margin: 0 auto;
+            max-width: 80%;
+            padding: 0 1em;
 }
