--- a/components/PostPreview/PostPreview.scss
+++ b/components/PostPreview/PostPreview.scss
@@ -15,8 +15,9 @@
 
     .previewImage{
         width: 100%;
-        height: 100%;
+        height: 35vh;
         object-fit: cover;
+        background-position: center center;
         box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
         
 
@@ -98,6 +99,11 @@
 
    .postPreview{
        padding: none !important;
+   }
+
+   .previewImage{
+       height:  25vh;
+
    }
 
    .title {
