Added code to programatically update carousel with data from strapi

--- a/components/PostPreview/PostPreview.scss
+++ b/components/PostPreview/PostPreview.scss
@@ -85,8 +85,9 @@
         font-weight: bold;
         background: inherit;
 
+
         &:hover{
-            color: black;
+            color: white;
             border-color: #50D0E8;
         }
     }
