--- a/components/HomeCarousel/HomeCarousel.scss
+++ b/components/HomeCarousel/HomeCarousel.scss
@@ -1,8 +1,88 @@
 .carousel{
-    max-width: 100%;
+    width: 100%;
+    height: 50vh;
     margin: 0;
     padding: 0;
+    text-align: center;
 }
+
+.carouselImage{
+    width: 100%;
+    height: 50vh;
+    object-fit: cover;
+    opacity: 0.6;
+}
+
+.carouselTitle{
+    position: absolute;
+    top: 25%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-weight: bold;
+    color: white;
+    font-size: xxx-large;
+    white-space: nowrap;
+    overflow: hidden;
+}
+
+.carouselAuthor{
+    position: absolute;
+    top: 37%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-weight: bold;
+    color: pink;
+    font-size: medium;
+}
+
+.carouselHeader{
+    height: 600px;
+    width: 100vw;
+    background: black;
+    overflow: hidden;
+}
+
+.carouselCategoryButton{
+    position: absolute;
+    top: 25%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    background-color: black;
+    margin-top: .5em;
+    padding: 0.1em 1em;
+    text-transform:capitalize;
+    font-size: medium;
+    font-weight: bold;
+    border: none;
+
+    &:hover{
+        background-color: pink;
+    }
+}
+
+.readButton{
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    border-color: pink;
+    padding: .5em 0;
+    border-left: none;
+    border-right: none;
+    border-top: none;
+    margin-top: .7em;
+    font-size: medium;
+    font-weight: bold;
+    background: inherit;
+
+        &:hover{
+            color: white;
+            border-color: #50D0E8;
+        }
+}
+
 
 
 @media screen and (max-width: 1280px) {
