--- a/styles/common.scss
+++ b/styles/common.scss
@@ -24,7 +24,20 @@ a {
     }
 }
 
+img {
+    width: 50%;
+    height: 50%;
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    background-position: center center;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 
+    &:hover{
+        box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+        transition: transform 250ms;
+    }
+}
 
 .container {
     margin: 0 auto;
