--- a/components/Footer/Footer.scss
+++ b/components/Footer/Footer.scss
@@ -1,23 +1,20 @@
 .footer {
     
-    background-color: pink;
-    color: black;
-    padding: 1em 0;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 0 auto;
-    max-width: 100%;
-    padding: 0 1em;
+    background-color: rgb(221, 221, 221);
+    width: 100%;
+    height: 25vh;
+    margin: 0;
+    padding-top: 1em;
+    text-align: center;
+    
 
     ul{
-        margin: unset;
         list-style: none;
         justify-content: space-between;
         color: black;
         margin:  .5em;
         cursor: pointer;
-        font-size: x-large;
+        font-size: xx-large;
     }
 
     .socialLinkContainer{
