--- a/components/PostPreview/PostPreview.scss
+++ b/components/PostPreview/PostPreview.scss
@@ -87,7 +87,7 @@
 
 
         &:hover{
-            color: white;
+            color: black;
             border-color: #50D0E8;
         }
     }
@@ -104,7 +104,6 @@
 
    .previewImage{
        height:  25vh;
-
    }
 
    .title {
