--- a/styles/index.scss
+++ b/styles/index.scss
@@ -13,5 +13,7 @@
 @import "../components/Footer/Footer.scss";
 @import "../components/HomeCarousel/HomeCarousel.scss";
 
+/* Article Styles */
+@import "../pages/posts/posts.scss";
 
 /* Dark Mode Styles */
