--- a/pages/posts/posts.scss
+++ b/pages/posts/posts.scss
@@ -31,6 +31,27 @@
 .blogDescription{
     font-size: large;
     font-weight: normal;
+    font-style: italic;
+    margin-top: .1px;
     
 }
+
+.blogContentContainer{
+    font-size: large;
+    margin-left: 3em;
+    margin-right: 3em;
+    padding-bottom: 3em;
+}
+
+.featuredPostsBlog{
+    font-size: x-large;
+}
+
+@media  screen and (max-width: 1280px) {
+
+    .featuredPostsBlog{
+        display: none;
+        
+    }
+ }
 
