continued updating travel posts page to build category page funtionality

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -12,6 +12,7 @@
 @import "../components/Navigation/Mobile/MobileNav.scss";
 @import "../components/Footer/Footer.scss";
 @import "../components/HomeCarousel/HomeCarousel.scss";
+@import "../components/PagePreview/PagePreview.scss";
 
 /* Article Styles */
 @import "../pages/posts/posts.scss";
