--- a/styles/common.scss
+++ b/styles/common.scss
@@ -44,3 +44,28 @@ img {
     max-width: 80%;
     padding: 0 1em;
 }
+
+.authorName{
+    color: pink;
+    text-decoration: none;
+    margin-top: 0.1em;
+}
+
+.readMoreButton{
+    color: black;
+    border-color: pink;
+    padding: .5em 0;
+    border-left: none;
+    border-right: none;
+    border-top: none;
+    margin-top: .7em;
+    font-size: medium;
+    font-weight: bold;
+    background: inherit;
+
+
+    &:hover{
+        color: black;
+        border-color: #50D0E8;
+    }
+}
