Continued updating styles

--- a/components/Navigation/Desktop/DesktopNav.scss
+++ b/components/Navigation/Desktop/DesktopNav.scss
@@ -14,7 +14,7 @@
         margin: unset;
         padding: unset;
         list-style: none;
-        font-size: x-large;
+        font-size: 20px;
     }
 
     
@@ -29,7 +29,7 @@
             
             &:hover{
                 text-decoration: none;
-                color:#FBD3E5;
+                color:#FDA300;
             }   
     }
 
