--- a/components/HomeCarousel/HomeCarousel.scss
+++ b/components/HomeCarousel/HomeCarousel.scss
@@ -31,7 +31,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     font-weight: bold;
-    color: pink;
+    color: #FDA300;
     font-size: medium;
 }
 
@@ -57,7 +57,7 @@
     border: none;
 
     &:hover{
-        background-color: pink;
+        background-color: #1F4762;
     }
 }
 
@@ -67,7 +67,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     color: white;
-    border-color: pink;
+    border-color: #FDA300;
     padding: .5em 0;
     border-left: none;
     border-right: none;
