updated footer styles

--- a/components/Footer/Footer.scss
+++ b/components/Footer/Footer.scss
@@ -1,5 +1,5 @@
 .footer {
-    background-color: rgb(253, 219, 225);
+    background-color: black;
     width: 100%;
     height: 25vh;
     margin: 0;
@@ -9,7 +9,7 @@
     ul{
         list-style: none;
         justify-content: space-between;
-        color: black;
+        color: #FDA300;
         margin:  .5em;
         cursor: pointer;
         font-size: xx-large;
@@ -21,6 +21,10 @@
         &:hover{
             color: white;
         }
+    }
+
+    p{
+        color: white;
     }
 
 }
