continued to update styles

--- a/components/CategoryPreview/CategoryPreview.scss
+++ b/components/CategoryPreview/CategoryPreview.scss
@@ -25,7 +25,7 @@
             
 
         &:hover{
-            background-color: pink;
+            background-color: #FDA300;
         }
     }
 }
@@ -60,7 +60,7 @@
 
 .readMoreButtonSmall{
     color: black;
-        border-color: pink;
+        border-color: #1f4762;
         padding: .5em 0;
         border-left: none;
         border-right: none;
@@ -73,7 +73,7 @@
 
     &:hover{
         color: black;
-        border-color: #50D0E8;
+        border-color: #FDA300;
         }
 }
 
