--- a/components/HomeLatestPosts/HomeLatestPosts.scss
+++ b/components/HomeLatestPosts/HomeLatestPosts.scss
@@ -1,12 +1,12 @@
 .categoryTitle{
     color: black;
     font-weight: bolder;
-    font-size: large;
-  
+    font-size: xx-large;
+    margin-bottom: 1px;
 }
 
 .separator{
-    border-color:#FBD3E5;
+    border-color:#1f4762;
     height: 1px;
     opacity: 25%;
     
