--- a/components/Navigation/Desktop/DesktopNav.scss
+++ b/components/Navigation/Desktop/DesktopNav.scss
@@ -1,20 +1,30 @@
 .navBar {
-    padding: 1em 0;
+    padding: 0em 0em;
+    position: sticky;
+
+    .imageContainer {
+       
+        padding: unset;
+    }
+
+    .linkContainer{
+        margin-left: 0em;
+    }
 
     .navContainer{
         display: flex;
         justify-content: space-between;
         align-items: center;
         margin: 0 auto;
-        max-width: 80%;
-        padding: 0 1em;
+        max-width: 90%;
+        padding: 0em 0em;
     }
 
     ul{
         margin: unset;
         padding: unset;
         list-style: none;
-        font-size: 20px;
+        font-size: x-large;
     }
 
     
@@ -24,7 +34,7 @@
 
     .menuLink{
             color: black;
-            padding: 0 1em;
+            padding: 0 9px;
             font-weight: bold;
             
             &:hover{
