--- a/components/PostPreview/PostPreview.scss
+++ b/components/PostPreview/PostPreview.scss
@@ -6,6 +6,7 @@
     h3{
         margin-top: unset;
         font-size: x-large;
+        
     }
 
     p {
@@ -30,7 +31,7 @@
     .categoryBox{
         button{
             color: white;
-            background-color: black;
+            background-color: #1F4762;
             margin-top: .5em;
             padding: 0.1em 1em;
             text-transform:capitalize;
@@ -40,7 +41,7 @@
             
 
             &:hover{
-                background-color: pink;
+                background-color: #FDA300;
             }
         }
     }
