--- a/pages/posts/posts.scss
+++ b/pages/posts/posts.scss
@@ -18,7 +18,7 @@
         
             
         &:hover{
-            background-color: pink;
+            background-color: #FDA300;
         }
     }
 }
