--- a/components/PostPreview/PostPreview.scss
+++ b/components/PostPreview/PostPreview.scss
@@ -6,6 +6,7 @@
     h3{
         margin-top: unset;
         font-size: x-large;
+        
     }
 
     p {
@@ -30,7 +31,7 @@
     .categoryBox{
         button{
             color: white;
-            background-color: black;
+            background-color: #1F4762;
             margin-top: .5em;
             padding: 0.1em 1em;
             text-transform:capitalize;
@@ -40,7 +41,7 @@
             
 
             &:hover{
-                background-color: pink;
+                background-color: #FDA300;
             }
         }
     }
@@ -61,40 +62,11 @@
         }
 
     }
-
-    .authorName{
-        color: pink;
-        text-decoration: none;
-        margin-top: 0.1em;
-    }
-
     .postPreviewContent{
         padding-top: .5em;
         padding-bottom: 1em;
     }
-
-    .readMoreButton{
-        color: black;
-        border-color: pink;
-        padding: .5em 0;
-        border-left: none;
-        border-right: none;
-        border-top: none;
-        margin-top: .7em;
-        font-size: medium;
-        font-weight: bold;
-        background: inherit;
-
-
-        &:hover{
-            color: black;
-            border-color: #50D0E8;
-        }
-    }
-
-
 }
-
 
 @media  screen and (max-width: 1280px) {
 
