--- a/components/PostPreview/PostPreview.scss
+++ b/components/PostPreview/PostPreview.scss
@@ -31,7 +31,7 @@
     .categoryBox{
         button{
             color: white;
-            background-color: #1F4762;
+            background-color: black;
             margin-top: .5em;
             padding: 0.1em 1em;
             text-transform:capitalize;
