--- a/components/TopBar/TopBar.scss
+++ b/components/TopBar/TopBar.scss
@@ -1,8 +1,6 @@
 .topBar{
     
-    background-color: #1f4762;
-
-
+    background-color: #FDA300;
     ul{
         margin: unset;
         padding: unset;
@@ -12,7 +10,7 @@
 
     .socialContainer {
         .socialLink {
-        color: #FDA300;
+        color: black;
         margin:  .5em;
         cursor: pointer;
 
