--- a/components/Navigation/Mobile/MobileNav.scss
+++ b/components/Navigation/Mobile/MobileNav.scss
@@ -22,12 +22,12 @@
   
   /* Color/shape of burger icon bars */
   .bm-burger-bars {
-    background: black;
+    background: #FDA300;
   }
   
   /* Color/shape of burger icon bars on hover*/
   .bm-burger-bars-hover {
-    background: pink;
+    background: black;
   }
   
   /* Position and sizing of clickable cross button */
@@ -38,7 +38,7 @@
   
   /* Color/shape of close button cross */
   .bm-cross {
-    background: pink;
+    background: #fda300;
   }
   
   /*
@@ -69,7 +69,7 @@
     font-size: xx-large;
     
     &:hover{
-        color: pink;
+        color: #fda300;
         text-decoration: none;
         cursor: pointer;
     }
@@ -77,7 +77,7 @@
   
   /* Styling of overlay */
   .bm-overlay {
-    background: pink;
+    background: #fda300;
   }
 
   .mobileSocialContainer {
@@ -86,19 +86,19 @@
 
     ul{
         list-style: none;
-        
-        
+      
     }
     
     .mobileSocialLink {
         left: 0;
         margin: 15px;
-        color: #50D0E8;
+        color: #fda300;
         cursor: pointer;
         padding: 0;
+      
     
         &:hover{
-            color: pink;
+            color: white;
         }
     }
 
