--- a/components/HomeCarousel/HomeCarousel.scss
+++ b/components/HomeCarousel/HomeCarousel.scss
@@ -83,11 +83,12 @@
         }
 }
 
+@media  screen and (max-width: 1000px ){
+    .carouselTitle{
 
-@media screen and (max-width: 1280px) {
+        top: 28%;
+        left: 50%;
+        font-size: xx-large;
+    }
     
-   .carousel{
-       display: none;
-   } 
-   
 }
