Feature/mobile responsiveness (#48)
* Fixed bug with all age randomiser that randomised JSON

* fixed responsiveness of blog posts

* fixed child element error

* added carousel to mobile friendly version

* updates

--- a/components/HomeCarousel/HomeCarousel.scss
+++ b/components/HomeCarousel/HomeCarousel.scss
@@ -83,11 +83,13 @@
         }
 }
 
+@media  screen and (max-width: 1000px ){
+    .carouselTitle{
 
-@media screen and (max-width: 1280px) {
+        top: 29%;
+        left: 50%;
+        font-size: xx-large;
+        
+    }
     
-   .carousel{
-       display: none;
-   } 
-   
 }
