--- a/components/Navigation/Mobile/MobileNav.scss
+++ b/components/Navigation/Mobile/MobileNav.scss
@@ -52,7 +52,7 @@
   
   /* General sidebar styles */
   .bm-menu {
-    background: black;
+    background:#4085b3 ;
     font-size: x-large;
   }
   
