--- a/components/Footer/Footer.scss
+++ b/components/Footer/Footer.scss
@@ -1,7 +1,7 @@
 .footer {
     background-color: black;
     width: 100%;
-    height: 25vh;
+    height: 31vh;
     margin: 0;
     padding-top: 1em;
     text-align: center;
@@ -15,6 +15,15 @@
         font-size: xx-large;
     }
 
+    .copyright {
+      
+        
+        p{
+            padding-bottom: none;
+            margin-bottom: none;
+        }
+    }
+
     .socialLinkContainer{
         padding-right: 1em;
 
@@ -25,6 +34,34 @@
 
     p{
         color: white;
+    }
+
+    .footerLinks{
+        justify-content: space-between; 
+        margin: .5em;
+        padding: 0em 0em;
+        text-align: center;
+        cursor: pointer;
+        list-style: none;
+
+        li{
+            font-size: medium;
+            display: inline-block;
+            padding: 0 .5em;
+        }
+
+        ul{
+            margin: 0em 0em;
+        }
+
+        p{
+            color: #FDA300;
+            
+            &:hover{
+                color: white;
+                text-decoration: none;
+            }
+        }
     }
 
 }
